--- a/platforms/android/project.properties
+++ b/platforms/android/project.properties
@@ -12,3 +12,8 @@
 # Project target.
 target=android-23
 android.library.reference.1=CordovaLib
+cordova.system.library.1=com.google.android.gms:play-services-location:+
+cordova.system.library.2=com.android.support:support-v4:+
+cordova.gradle.include.1=phonegap-plugin-push/hellocordova-push.gradle
+cordova.system.library.3=com.android.support:support-v13:23+
+cordova.system.library.4=com.google.android.gms:play-services-gcm:+
